// Copyright 2023 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.environment;
option go_package = "github.com/bucketeer-io/bucketeer/proto/environment";

import "google/protobuf/wrappers.proto";

import "proto/environment/environment.proto";
import "proto/environment/project.proto";
import "proto/environment/command.proto";

message GetEnvironmentRequest {
  string id = 1;
}

message GetEnvironmentResponse {
  Environment environment = 1;
}

message GetEnvironmentByNamespaceRequest {
  string namespace = 1;
}

message GetEnvironmentByNamespaceResponse {
  Environment environment = 1;
}

message ListEnvironmentsRequest {
  enum OrderBy {
    DEFAULT = 0;
    ID = 1;
    CREATED_AT = 2;
    UPDATED_AT = 3;
  }
  enum OrderDirection {
    ASC = 0;
    DESC = 1;
  }
  int64 page_size = 1;
  string cursor = 2;
  string project_id = 3;
  OrderBy order_by = 4;
  OrderDirection order_direction = 5;
  string search_keyword = 6;
}

message ListEnvironmentsResponse {
  repeated Environment environments = 1;
  string cursor = 2;
  int64 total_count = 3;
}

message CreateEnvironmentRequest {
  CreateEnvironmentCommand command = 1;
}

message CreateEnvironmentResponse {}

message UpdateEnvironmentRequest {
  string id = 1;
  RenameEnvironmentCommand rename_command = 2 [deprecated = true];
  ChangeDescriptionEnvironmentCommand change_description_command = 3;
}

message UpdateEnvironmentResponse {}

message DeleteEnvironmentRequest {
  string id = 1;
  DeleteEnvironmentCommand command = 2;
}

message DeleteEnvironmentResponse {}

message GetEnvironmentV2Request {
  string id = 1;
}

message GetEnvironmentV2Response {
  EnvironmentV2 environment = 1;
}

message ListEnvironmentsV2Request {
  enum OrderBy {
    DEFAULT = 0;
    ID = 1;
    NAME = 2;
    URL_CODE = 3;
    CREATED_AT = 4;
    UPDATED_AT = 5;
  }
  enum OrderDirection {
    ASC = 0;
    DESC = 1;
  }
  int64 page_size = 1;
  string cursor = 2;
  OrderBy order_by = 3;
  OrderDirection order_direction = 4;
  string project_id = 5;
  google.protobuf.BoolValue archived = 6;
  string search_keyword = 7;
}

message ListEnvironmentsV2Response {
  repeated EnvironmentV2 environments = 1;
  string cursor = 2;
  int64 total_count = 3;
}

message CreateEnvironmentV2Request {
  CreateEnvironmentV2Command command = 1;
}

message CreateEnvironmentV2Response {}

message UpdateEnvironmentV2Request {
  string id = 1;
  RenameEnvironmentV2Command rename_command = 2;
  ChangeDescriptionEnvironmentV2Command change_description_command = 3;
}

message UpdateEnvironmentV2Response {}

message ArchiveEnvironmentV2Request {
  string id = 1;
  ArchiveEnvironmentV2Command command = 2;
}

message ArchiveEnvironmentV2Response {}

message UnarchiveEnvironmentV2Request {
  string id = 1;
  UnarchiveEnvironmentV2Command command = 2;
}

message UnarchiveEnvironmentV2Response {}

message GetProjectRequest {
  string id = 1;
}

message GetProjectResponse {
  Project project = 1;
}

message ListProjectsRequest {
  enum OrderBy {
    DEFAULT = 0;
    ID = 1;
    CREATED_AT = 2;
    UPDATED_AT = 3;
    NAME = 4;
    URL_CODE = 5;
  }
  enum OrderDirection {
    ASC = 0;
    DESC = 1;
  }
  int64 page_size = 1;
  string cursor = 2;
  OrderBy order_by = 3;
  OrderDirection order_direction = 4;
  string search_keyword = 5;
  google.protobuf.BoolValue disabled = 6;
}

message ListProjectsResponse {
  repeated Project projects = 1;
  string cursor = 2;
  int64 total_count = 3;
}
message CreateProjectRequest {
  CreateProjectCommand command = 1;
}

message CreateProjectResponse {}

message CreateTrialProjectRequest {
  CreateTrialProjectCommand command = 1;
}

message CreateTrialProjectResponse {}

message UpdateProjectRequest {
  string id = 1;
  ChangeDescriptionProjectCommand change_description_command = 2;
  RenameProjectCommand rename_command = 3;
}

message UpdateProjectResponse {}

message EnableProjectRequest {
  string id = 1;
  EnableProjectCommand command = 2;
}

message EnableProjectResponse {}

message DisableProjectRequest {
  string id = 1;
  DisableProjectCommand command = 2;
}

message DisableProjectResponse {}

message ConvertTrialProjectRequest {
  string id = 1;
  ConvertTrialProjectCommand command = 2;
}

message ConvertTrialProjectResponse {}

service EnvironmentService {
  rpc GetEnvironment(GetEnvironmentRequest) returns (GetEnvironmentResponse) {}
  rpc GetEnvironmentByNamespace(GetEnvironmentByNamespaceRequest)
      returns (GetEnvironmentByNamespaceResponse) {}
  rpc ListEnvironments(ListEnvironmentsRequest)
      returns (ListEnvironmentsResponse) {}
  rpc CreateEnvironment(CreateEnvironmentRequest)
      returns (CreateEnvironmentResponse) {}
  rpc UpdateEnvironment(UpdateEnvironmentRequest)
      returns (UpdateEnvironmentResponse) {}
  rpc DeleteEnvironment(DeleteEnvironmentRequest)
      returns (DeleteEnvironmentResponse) {}

  rpc GetEnvironmentV2(GetEnvironmentV2Request)
      returns (GetEnvironmentV2Response) {}
  rpc ListEnvironmentsV2(ListEnvironmentsV2Request)
      returns (ListEnvironmentsV2Response) {}
  rpc CreateEnvironmentV2(CreateEnvironmentV2Request)
      returns (CreateEnvironmentV2Response) {}
  rpc UpdateEnvironmentV2(UpdateEnvironmentV2Request)
      returns (UpdateEnvironmentV2Response) {}
  rpc ArchiveEnvironmentV2(ArchiveEnvironmentV2Request)
      returns (ArchiveEnvironmentV2Response) {}
  rpc UnarchiveEnvironmentV2(UnarchiveEnvironmentV2Request)
      returns (UnarchiveEnvironmentV2Response) {}

  rpc GetProject(GetProjectRequest) returns (GetProjectResponse) {}
  rpc ListProjects(ListProjectsRequest) returns (ListProjectsResponse) {}
  rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse) {}
  rpc CreateTrialProject(CreateTrialProjectRequest)
      returns (CreateTrialProjectResponse) {}
  rpc UpdateProject(UpdateProjectRequest) returns (UpdateProjectResponse) {}
  rpc EnableProject(EnableProjectRequest) returns (EnableProjectResponse) {}
  rpc DisableProject(DisableProjectRequest) returns (DisableProjectResponse) {}
  rpc ConvertTrialProject(ConvertTrialProjectRequest)
      returns (ConvertTrialProjectResponse) {}
}
